test/good/int01.inc.c

jwr_int( INT64_MAX);
