test/bad/noseq01.inc.c
jwr_arr();
jwr_int(0);
jwr_int(0);
jwr_pop();

jwr_int(0);
